# healpix-convolution

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  neighbours.ipynb  offsets.ipynb  pyproject.toml  visualize-neighbours.ipynb
.github/workflows/: ci.yaml  pypi.yaml
ci/requirements/: docs.yaml  environment.yaml
docs/: api-hidden.md  api-hidden.rst  api.md  conf.py  index.md  requirements.txt
docs/user-guide/: array.md  xarray.md
experimentation/: convolution-numpy.ipynb  convolution.ipynb  kernel.ipynb  neighbours.ipynb  offsets.ipynb  visualize-neighbours.ipynb
healpix_convolution/: __init__.py  convolution.py  distances.py  neighbours.py  padding.py  plotting.py
healpix_convolution/kernels/: __init__.py  common.py  gaussian.py  wavelet.py
healpix_convolution/kernels/xarray/: gaussian.py
healpix_convolution/tests/: test_convolution.py  test_distances.py  test_gaussian.py  test_kernels.py  test_neighbours.py  test_padding.py
healpix_convolution/xarray/: __init__.py  convolution.py  padding.py  utils.py
healpix_convolution/xarray/kernels/: __init__.py  gaussian.py  wavelet.py
healpix_indexing/: __init__.py
healpix_indexing/tests/: test_neighbours.py
