[project]
name = "healpix-convolution"
requires-python = ">= 3.11"
license = {text = "Apache-2.0"}
dependencies = []
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["healpix_convolution"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.ruff]
builtins = ["ellipsis"]
exclude = [
    ".git",
    ".eggs",
    "build",
    "dist",
    "__pycache__",
    "docs",
]
target-version = "py311"

extend-include = ["*.ipynb"]
line-length = 100

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    # isort
    "I",
    # Pyupgrade
    "UP",
    # tidy imports
    "TID",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
extend-safe-fixes = [
    "TID252",  # absolute imports
]
fixable = ["I", "TID252"]


[tool.ruff.lint.isort]
known-first-party = ["healpix_convolution"]
known-third-party = []
