[project]
name = "healpix-convolution"
requires-python = ">= 3.11"
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
]
description = "space-domain convolution on the healpix grid"
readme = "README.md"
dependencies = [
  "numpy",
  "cdshealpix",
  "healpix-geo",
  "xdggs",
  "sparse",
  "opt_einsum",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://healpix-convolution.readthedocs.io"
Repository = "https://github.com/iaocea/healpix-convolution"

[project.optional-dependencies]
xarray = ["xarray"]
lazy = ["dask"]
plotting = ["matplotlib", "cartopy"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["healpix_convolution"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.coverage.run]
source = ["healpix_convolution"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]

[tool.ruff]
builtins = ["ellipsis"]
exclude = [
    ".git",
    ".eggs",
    "build",
    "dist",
    "__pycache__",
    "docs",
]
target-version = "py311"

extend-include = ["*.ipynb"]
line-length = 100

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "I",  # isort
    "UP", # Pyupgrade
    "TID", # tidy imports
]
extend-safe-fixes = [
    "TID252",  # absolute imports
]
fixable = ["I", "TID"]


[tool.ruff.lint.isort]
known-first-party = ["healpix_convolution"]
known-third-party = []

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
